resources/cr/basic/basic.template.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: $APK_API_PROD_ROUTE
spec:
  hostnames:
    - prod.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: Default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/get/
          method: GET
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/put/
          method: PUT
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/patch/
          method: PATCH
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/post/
          method: POST
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /$APK_API_CONTEXT/$APK_API_VERSION/delete/
          method: DELETE
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
