resources/cr/basic/basic.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-http-route-http-bin-api-basic
spec:
  hostnames:
    - prod.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: Default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/get/
          method: GET
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/put/
          method: PUT
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/patch/
          method: PATCH
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/post/
          method: POST
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /http-bin-api-basic/1.0.8/delete/
          method: DELETE
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 80
          weight: 1
